# CHIP8_Emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  display_utils.c  file_utils.c  main.c
include/: display_utils.h  file_utils.h
src/: display_utils.c  display_utils.h  file_utils.c  file_utils.h  main.c
test/: CMakeLists.txt
test/file_utils_tests/: read_file_tests.cpp
